# BalancedCuckooFilter

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  plot.ipynb  run.sh  test.py  test.txt
include/: bucket.hpp  collect.h  collect.hpp  cuckoo_filter.h  cuckoo_filter.hpp  fk_cuckoo_hashing.h  utils.h
result/: cuckoo-1.csv  cuckoo-2.csv  cuckoo-4.csv  cuckoo-8.csv  cuckoo-AWARE.csv  cuckoo-FIRST.csv  cuckoo-LRU.csv  cuckoo-RANDOM.csv  cuckoo-RR.csv  cuckoo.csv  ploted_result.csv
src/: CMakeLists.txt  Makefile  cmake_install.cmake  collect.cpp  cuckoo_filter.cpp  fk_cuckoo_hashing.cpp  fk_main.cpp  main.cpp
